# fastapi_zero

./: .coverage  README.md  pyproject.toml
fastapi_zero/: app.py  models.py  scheme.py
tests/: conftest.py  test_app.py  test_db.py
