[tool.poetry]
name = "fastapi-zero"
version = "0.1.0"
description = ""
authors = ["Marcos Vicente <marcosvicentesiqueira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
